# game-engine

./: .gitignore  README.md
Game Engine/: Game Engine.vcxproj
Game Engine/docs/: Doxyfile
GameEngine/: CMakeLists.txt  Game Engine.sln  Game Engine.vcxproj.filters
GameEngine/libraries/lib/Win64/: gtest.lib
GameEngine/source/headers/: Application.h  Entity.h  EntityManager.h
GameEngine/source/src/: Application.cpp  EntityManager.cpp  main.cpp
